# ptop

./: Cargo.toml  README.md  demo.tape
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
homebrew/: SETUP.md  ptop.rb
src/: app.rs  config.rs  logging.rs  main.rs  ping.rs  replay.rs  stats.rs  ui.rs
